initial examples for cmold