@@ -1,4 +1,4 @@
-package graph.jena.examples;
+package graph.jena.cmold;
 
 import graph.jena.datatypes.JenaGraphOrBindings;
 import graph.jena.operatorsimpl.r2r.jena.FullQueryBinaryJena;
@@ -9,12 +9,19 @@ import graph.jena.stream.JenaBindingStream;
 import graph.jena.stream.JenaStreamGenerator;
 import org.apache.jena.graph.Graph;
 import org.apache.jena.graph.compose.Union;
+import org.apache.jena.riot.Lang;
+import org.apache.jena.riot.RDFDataMgr;
+import org.apache.jena.shacl.ShaclValidator;
+import org.apache.jena.shacl.Shapes;
+import org.apache.jena.shacl.ValidationReport;
+import org.apache.jena.shacl.lib.ShLib;
 import org.apache.jena.sparql.engine.binding.Binding;
 import org.apache.jena.sparql.graph.GraphFactory;
 import org.streamreasoning.polyflow.api.enums.Tick;
 import org.streamreasoning.polyflow.api.operators.r2r.RelationToRelationOperator;
 import org.streamreasoning.polyflow.api.operators.r2s.RelationToStreamOperator;
 import org.streamreasoning.polyflow.api.operators.s2r.execution.assigner.StreamToRelationOperator;
+import org.streamreasoning.polyflow.api.operators.s2r.execution.state.SegmentFactory;
 import org.streamreasoning.polyflow.api.processing.ContinuousProgram;
 import org.streamreasoning.polyflow.api.processing.Task;
 import org.streamreasoning.polyflow.api.secret.report.Report;
@@ -23,11 +30,9 @@ import org.streamreasoning.polyflow.api.secret.report.strategies.OnWindowClose;
 import org.streamreasoning.polyflow.api.secret.time.Time;
 import org.streamreasoning.polyflow.api.secret.time.TimeImpl;
 import org.streamreasoning.polyflow.api.stream.data.DataStream;
-import org.streamreasoning.polyflow.base.contentimpl.factories.AccumulatorContentFactory;
 import org.streamreasoning.polyflow.base.operatorsimpl.dag.DAGImpl;
 import org.streamreasoning.polyflow.base.operatorsimpl.s2r.MBHoppingWindowOpImpl;
 import org.streamreasoning.polyflow.base.operatorsimpl.s2r.state.MapMultiBufferState;
-import org.streamreasoning.polyflow.base.operatorsimpl.s2r.MBHoppingWindowOpImpl;
 import org.streamreasoning.polyflow.base.processing.ContinuousProgramImpl;
 import org.streamreasoning.polyflow.base.processing.TaskImpl;
 
@@ -35,8 +40,10 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-public class polyflowExample_twoS2R {
+public class CumultativeValidation {
 
+    static final String SHAPES = "shapes.ttl";
+    static final String DATA = "data1.ttl";
 
     public static void main(String[] args) throws InterruptedException {
 
@@ -53,10 +60,21 @@ public class polyflowExample_twoS2R {
         Tick tick = Tick.TIME_DRIVEN;
         Time instance = new TimeImpl(0);
 
+        Graph shapesGraph = RDFDataMgr.loadGraph(SHAPES);
+        Graph dataGraph = RDFDataMgr.loadGraph(DATA);
+
+        Shapes shapes = Shapes.parse(shapesGraph);
+
+        ValidationReport vreport = ShaclValidator.get().validate(shapes, dataGraph);
+        ShLib.printReport(vreport);
+        System.out.println();
+        RDFDataMgr.write(System.out, vreport.getModel(), Lang.TTL);
+
         JenaGraphOrBindings emptyContent = new JenaGraphOrBindings(GraphFactory.createGraphMem());
 
-        AccumulatorContentFactory<Graph, Graph, JenaGraphOrBindings> accumulatorContentFactory = new AccumulatorContentFactory<>(
-                (g) -> g,
+        SegmentFactory<Graph, JenaGraphOrBindings> accumulatorContentFactory = new AccumulatorShapedContentFactory(
+                shapesGraph,
+                (g) -> ShaclValidator.get().conforms(shapesGraph, g) ? g : GraphFactory.createGraphMem(),
                 (g) -> new JenaGraphOrBindings(g),
                 (r1, r2) -> new JenaGraphOrBindings(new Union(r1.getContent(), r2.getContent())),
                 emptyContent
@@ -65,7 +83,7 @@ public class polyflowExample_twoS2R {
 
         ContinuousProgram<Graph, Graph, JenaGraphOrBindings, Binding> cp = new ContinuousProgramImpl<>();
 
-        StreamToRelationOperator<Graph, JenaGraphOrBindings> s2rOp_one =
+        StreamToRelationOperator<Graph, JenaGraphOrBindings> s2rOp =
                 new MBHoppingWindowOpImpl<>(
                         tick,
                         instance,
@@ -75,40 +93,22 @@ public class polyflowExample_twoS2R {
                         1000,
                         1000);
 
-        StreamToRelationOperator<Graph, JenaGraphOrBindings> s2rOp_two =
-                new MBHoppingWindowOpImpl<>(
-                        tick,
-                        instance,
-                        "w2",
-                        new MapMultiBufferState<>(accumulatorContentFactory),
-                        report,
-                        500,
-                        500);
-
-
-        List<String> s2r_names = new ArrayList<>();
-        s2r_names.add(s2rOp_one.getName());
-        s2r_names.add(s2rOp_two.getName());
-
-        RelationToRelationOperator<JenaGraphOrBindings> r2rOp1 = new FullQueryUnaryJena("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp_one.getName()), "partial_1");
-        RelationToRelationOperator<JenaGraphOrBindings> r2rOp2 = new FullQueryUnaryJena("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp_two.getName()), "partial_2");
-        RelationToRelationOperator<JenaGraphOrBindings> r2rBinaryOp = new FullQueryBinaryJena("", List.of("partial_1", "partial_2"), "partial_3");
-
+        RelationToRelationOperator<JenaGraphOrBindings> r2rOp1 = new FullQueryUnaryJena("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), "partial_1");
+        RelationToRelationOperator<JenaGraphOrBindings> r2rOp2 = new FullQueryUnaryJena("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), "partial_2");
+        RelationToRelationOperator<JenaGraphOrBindings> r2rOp3 = new FullQueryBinaryJena("", List.of("partial_1", "partial_2"), "partial_3");
 
         RelationToStreamOperator<JenaGraphOrBindings, Binding> r2sOp = new RelationToStreamOpImpl();
 
         Task<Graph, Graph, JenaGraphOrBindings, Binding> task = new TaskImpl<>("1");
-        task = task.addS2ROperator(s2rOp_one, inputStream)
-                .addS2ROperator(s2rOp_two, inputStream)
+        task = task.addS2ROperator(s2rOp, inputStream)
                 .addR2ROperator(r2rOp1)
                 .addR2ROperator(r2rOp2)
-                .addR2ROperator(r2rBinaryOp)
+                .addR2ROperator(r2rOp3)
                 .addR2SOperator(r2sOp)
                 .addDAG(new DAGImpl<>())
                 .addSDS(new SDSJena())
                 .addTime(instance);
         task.initialize();
-
 
         List<DataStream<Graph>> inputStreams = new ArrayList<>();
         inputStreams.add(inputStream);
@@ -125,5 +125,4 @@ public class polyflowExample_twoS2R {
         Thread.sleep(20_000);
         generator.stopStreaming();
     }
-
 }
